--- a/stan-overview/exercises/1.1/slides.html
+++ b/stan-overview/exercises/1.1/slides.html
@@ -144,7 +144,12 @@
 </article></slide><slide class=''><hgroup><h2>Resources</h2></hgroup><article  id="resources">
 
 <ul>
-<li><a href='http://mc-stan.org' title=''>http://mc-stan.org</a> &gt; Users &gt; Documentation &gt; Stan Manual (pdf)</li>
+<li>Data: <a href='http://mc-stan.org/workshops/dec2017/1.1.zip' title=''>http://mc-stan.org/workshops/dec2017/1.1.zip</a></li>
+<li><a href='http://mc-stan.org' title=''>http://mc-stan.org</a> &gt; Users &gt; Documentation &gt; Stan Reference Manual (pdf)
+
+<ul>
+<li>List of functions in the index</li>
+</ul></li>
 <li>We think adult heights are normally distributed, \(y \sim \mathcal{N}(\mu, \sigma)\)</li>
 </ul>
 
